--- a/index.html
+++ b/index.html
@@ -1,9 +1,69 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Odin Landing Page</title>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- HEADER -->
+    <header class="header">
+      <h2>Header Logo</h2>
+      <nav class="navigation">
+        <ul>
+          <li><a href="#">header link one</a></li>
+          <li><a href="#">header link two</a></li>
+          <li><a href="#">header link three</a></li>
+        </ul>
+      </nav>
+    </header>
+    <!-- HEADER -->
+    <!-- MAIN CONTENT -->
+    <main>
+      <!-- HERO AREA -->
+      <section class="hero-area">
+        <h1>This website is awesome</h1>
+        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+        <button>Sign up</button>
+        <img src="" alt="this is a placeholder for an image" />
+      </section>
+      <!-- HERO AREA -->
+      <!-- FIRST SECTION -->
+      <section class="information">
+        <h2>Some random information</h2>
+        <div class="img-block"></div>
+        <p>this is some subtext under an illustration or image</p>
+        <div class="img-block"></div>
+        <p>this is some subtext under an illustration or image</p>
+        <div class="img-block"></div>
+        <p>this is some subtext under an illustration or image</p>
+        <div class="img-block"></div>
+        <p>this is some subtext under an illustration or image</p>
+      </section>
+      <!-- FIRST SECTION -->
+      <!-- SECOND SECTION-->
+      <section class="quote">
+        <p>
+          This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who
+          knows? All I know is that it looks nice.
+        </p>
+        <p>-Unknown</p>
+      </section>
+      <!-- SECOND SECTION-->
+      <!-- THIRD SECTION -->
+      <section class="signup">
+        <h2>Call to action! It's time!</h2>
+        <p>Sign up for our product by clicking that button right over there!</p>
+        <button>Sign up</button>
+      </section>
+      <!-- THIRD SECTION -->
+    </main>
+    <!-- MAIN CONTENT -->
+    <!-- FOOTER -->
+    <footer class="footer">
+      <p>Copyright &copy; The Odin Project 2021</p>
+    </footer>
+    <!-- FOOTER -->
+  </body>
 </html>
