Add and styled first  section/hero area

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
   <body>
     <!-- HEADER -->
     <header class="header">
-      <h2>Header Logo</h2>
-      <nav class="navigation">
+      <div class="header-left">
+        <h2>Header Logo</h2>
+      </div>
+      <nav class="header-links">
         <ul>
-          <li><a href="#">header link one</a></li>
-          <li><a href="#">header link two</a></li>
-          <li><a href="#">header link three</a></li>
+          <li><a href="#">Gallery</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -23,10 +25,14 @@
     <main>
       <!-- HERO AREA -->
       <section class="hero-area">
-        <h1>This website is awesome</h1>
-        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-        <button>Sign up</button>
-        <img src="" alt="this is a placeholder for an image" />
+        <div class="intro">
+          <h1>This website is awesome</h1>
+          <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+          <button>Sign up</button>
+        </div>
+        <div class="image-holder">
+          <img src="./images/city.jpeg" alt="Cityscape of Kilkenny, Ireland" width="450px" height="225px" />
+        </div>
       </section>
       <!-- HERO AREA -->
       <!-- FIRST SECTION -->
@@ -45,10 +51,9 @@
       <!-- SECOND SECTION-->
       <section class="quote">
         <p>
-          This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who
-          knows? All I know is that it looks nice.
+          “Let your eyes look forward; fix your gaze straight ahead. Carefully consider the path for your feet, and all your ways will be established”
         </p>
-        <p>-Unknown</p>
+        <p>-Proverbs 4:25-26</p>
       </section>
       <!-- SECOND SECTION-->
       <!-- THIRD SECTION -->
@@ -62,7 +67,7 @@
     <!-- MAIN CONTENT -->
     <!-- FOOTER -->
     <footer class="footer">
-      <p>Copyright &copy; The Odin Project 2021</p>
+      <p>Made by <a href="https://github.com/bongo418">Bongo</a></p>
     </footer>
     <!-- FOOTER -->
   </body>
