Add second section, images and styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- HEADER -->
     <header class="header">
       <div class="header-left">
-        <h2>Header Logo</h2>
+        <h2>Bongo's Photography Adventures</h2>
       </div>
       <nav class="header-links">
         <ul>
@@ -26,8 +26,8 @@
       <!-- HERO AREA -->
       <section class="hero-area">
         <div class="intro">
-          <h1>This website is awesome</h1>
-          <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+          <h1>My pictures from Ireland</h1>
+          <p>A few pictures I took a while back when I was on vacation in Ireland. Places include Kilkenny, Laois and Bray</p>
           <button>Sign up</button>
         </div>
         <div class="image-holder">
@@ -37,15 +37,25 @@
       <!-- HERO AREA -->
       <!-- FIRST SECTION -->
       <section class="information">
-        <h2>Some random information</h2>
-        <div class="img-block"></div>
-        <p>this is some subtext under an illustration or image</p>
-        <div class="img-block"></div>
-        <p>this is some subtext under an illustration or image</p>
-        <div class="img-block"></div>
-        <p>this is some subtext under an illustration or image</p>
-        <div class="img-block"></div>
-        <p>this is some subtext under an illustration or image</p>
+        <h2>Randomly Selected Pictures</h2>
+        <div class="blocks">
+          <div class="img-block">
+            <img src="./images/bray-beach.jpeg" alt="A beach made out of rocks called Bray Beach in Bray, Ireland" />
+            <div class="img-text"><p>Bray Beach, Bray, County Wicklow</p></div>
+          </div>
+          <div class="img-block">
+            <img src="./images/kilkenny-church.jpeg" alt="St. Candice's Cathedral and it's round tower in Kilkenny, Ireland" />
+            <div class="img-text"><p>St. Candice's Cathedral, Kilkenny, County Kilkenny</p></div>
+          </div>
+          <div class="img-block">
+            <img src="./images/dublin-museum.jpeg" alt="The National Leprechaun Museum in Dublin" />
+            <div class="img-text"><p>The National Leprechaun Museum, Dublin, County Dublin</p></div>
+          </div>
+          <div class="img-block">
+            <img src="./images/laois-castle.jpeg" alt="Ruins of Rock of Dunamase in Laois" />
+            <div class="img-text"><p>Rock of Dunamase, County Laois</p></div>
+          </div>
+        </div>
       </section>
       <!-- FIRST SECTION -->
       <!-- SECOND SECTION-->
