Add last sections, footer and styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- HEADER -->
     <header class="header">
       <div class="header-left">
-        <h2>Bongo's Photography Adventures</h2>
+        <h2>Bongo's Vacation Locations</h2>
       </div>
       <nav class="header-links">
         <ul>
@@ -26,8 +26,11 @@
       <!-- HERO AREA -->
       <section class="hero-area">
         <div class="intro">
-          <h1>My pictures from Ireland</h1>
-          <p>A few pictures I took a while back when I was on vacation in Ireland. Places include Kilkenny, Laois and Bray</p>
+          <h1>Vacation pictures, Ireland</h1>
+          <p>
+            A few pictures I took a while back when I was on vacation in Ireland. Places include
+            <span class="locations">Kilkenny, Laois and Bray</span>
+          </p>
           <button>Sign up</button>
         </div>
         <div class="image-holder">
@@ -59,25 +62,39 @@
       </section>
       <!-- FIRST SECTION -->
       <!-- SECOND SECTION-->
-      <section class="quote">
-        <p>
-          “Let your eyes look forward; fix your gaze straight ahead. Carefully consider the path for your feet, and all your ways will be established”
-        </p>
-        <p>-Proverbs 4:25-26</p>
+      <section class="quote-container">
+        <div class="quote-text">
+          <p>
+            “Let your eyes look forward; fix your gaze straight ahead. Carefully consider the path for your feet, and all your ways will be
+            established”
+          </p>
+          <div class="author">
+            <p>-Proverbs 4:25-26</p>
+          </div>
+        </div>
       </section>
       <!-- SECOND SECTION-->
       <!-- THIRD SECTION -->
-      <section class="signup">
-        <h2>Call to action! It's time!</h2>
-        <p>Sign up for our product by clicking that button right over there!</p>
-        <button>Sign up</button>
-      </section>
+      <div class="signup-container">
+        <section class="signup">
+          <div class="signup-info">
+            <h2>Have your own pictures to showcase?</h2>
+            <p>Sign up for an account to submit your photographs for our weekly feature!</p>
+          </div>
+          <div class="signup-btn">
+            <button>Sign up</button>
+          </div>
+        </section>
+      </div>
       <!-- THIRD SECTION -->
     </main>
     <!-- MAIN CONTENT -->
     <!-- FOOTER -->
     <footer class="footer">
-      <p>Made by <a href="https://github.com/bongo418">Bongo</a></p>
+      <p>
+        Made by <a href="https://github.com/bongo418"><span class="footer-links">Bongo</span></a> for
+        <a href="https://www.theodinproject.com/"><span class="footer-links">The Odin Project</span></a>
+      </p>
     </footer>
     <!-- FOOTER -->
   </body>
