Change name in footer

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <!-- FOOTER -->
     <footer class="footer">
       <p>
-        Made by <a href="https://github.com/bongo418"><span class="footer-links">Bongo</span></a> for
+        Made by <a href="https://github.com/bongo418"><span class="footer-links">Jason L.</span></a> for
         <a href="https://www.theodinproject.com/"><span class="footer-links">The Odin Project</span></a>
       </p>
     </footer>
